More attributes (#45)
* Restructure neural network querying

Co-authored-by: Jonas Pohl <git@jaypi4c.de>

* Improve fitness calculation

Co-authored-by: Jonas Pohl <git@jaypi4c.de>

* Improve fitness calculation

Co-authored-by: Jonas Pohl <git@jaypi4c.de>

* Some bug fixes

* Ensure different tracks from PartTrack if no seed is given

---------

Co-authored-by: Tilman Holube <tilman@holube.de>